<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UTTCoins</string>
    <string name="action_settings">Settings</string>
    <string name="login_placeholder">Adresse email</string>
    <string name="password_placeholder">Mot de passe</string>
    <string name="forgotten_account_text">mot de passe oublié</string>
    <string name="connexion_btn_text">Connexion</string>
    <string name="title_activity_wallet">MyWallet</string>
    <string name="signup_action_title">Sign up</string>
    <string name="setting_action_title">settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="user_name_input_placeholder">Nom d\'utilisateur</string>
    <string name="account_email_input_placeholder">Email du compte</string>
    <string name="generic_email_input_placeholder">Adresse email</string>
    <string name="password_confirmation_input_placeholder">Confirmer le mot de passe</string>
    <string name="form_next_button_text">Suivant</string>
    <string name="email_format_error_text">Format d\'email invalide</string>
    <string name="email_confirmation_error_text">Les emails ne correspondent pas</string>
    <string name="password_required_error_text">Mot de passe requis</string>
    <string name="password_confirmation_error_text">Les mots de passe ne correspondent pas</string>
    <string name="email_confirmation_input_placeholder" >Entrez à nouveau votre adresse email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generic_submit_btn_text">Submit</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="drawer_open">expend navigation</string>
    <string name="drawer_close">collapse navigation</string>
    <string name="logout_action_title">logout</string>
    <string name="title_activity_transactions">My transactions</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_paiement">My paiements</string>
    <string name="title_activity_activities">My activities</string>
	<string name="input_require_error_text">Ce champ est requis</string>
	<string name="first_name_input_placeholder">Prénom</string>
	<string name="name_input_placeholder">Nom</string>
	<string name="first_name_input_placeholder">Prénom</string>
	<string name="solde_main_title_text">Solde UTTCoins</string>
	<string name="solde_sub_title_text">Solde disponible</string>
	<string name="user_solde_default_text">0</string>
	<string name="new_send_payment_action_title">Envoie</string>
	<string name="new_asked_payment_action_title">Demande</string>
	<string name="tag_input_placeholder">Pseudo utilisé dans l\'application</string>
	<string name="payment_confirmation_button_text" >Payer</string>
	<string name="target_payment_placeholder">À:</string>
	<string name="payment_amount_placeholder" >Montant</string>
	<string name="uttCoins_currency_text" >UTTCoins</string>
	<string name="confirm_action_text" >Confirmer</string>
	<string name="cancel_action_text">Annuler</string>
	<string name="dialog_payment_confirm_title">Confirmer la transaction ?</string>
	<string name="donnationTo">Donnation à </string>
	<string name="transactionAmount">Montant de la transaction :</string>
	<string name="accountBalanceAfterTransaction">Solde après la transaction : </string>
	<string name="userNotFound" >Utilisateur introuvable !</string>
	<string name="payment_receiver_error_text" >Destinataire de la transaction requis</string>
	<string name="payment_amount_required_error" >Montant de la transaction requis</string>
	<string name="not_enougth_uttCoins_error" >Solde insufisant</string>
	<string name="refresh_action_title" >Refresh</string>
</resources>
