<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPasswordFragment" >

    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
    	
    	<TextView 
	        android:id="@id/password_error"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/password_required_error_text"
	        android:textColor="@color/text_error"
	        android:visibility="gone"/>
	    
	    <EditText
	        android:id="@id/password_input"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"       
		    android:layout_below="@id/password_error"
		    android:layout_centerHorizontal="true"
	        android:ems="10"
	        android:hint="@string/password_placeholder"
	        android:inputType="textPassword" />
	    
	<TextView
	    android:id="@id/forgotten_account_link"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@id/password_input"
	    android:layout_alignRight="@id/password_input"
	    android:layout_below="@id/password_input"
	    android:layout_marginTop="15dp"
	    android:ems="10"
	    android:textColor="@color/link_clickable"
	    android:text="@string/forgotten_account_text" />
	
 	</RelativeLayout>
</FrameLayout>
